crates/sid-widgets/tests/snapshots/network_widget_snapshot__network_default_layout.snap
---
source: crates/sid-widgets/tests/network_widget_snapshot.rs
expression: s
---
┌ Interfaces ────────┐┌ Listening ports ───────────────────────────────────────┐
│  * eth0            ││PORT    PID     PROTO  COMMAND        ADDR              │
│  * lo              ││22      1       tcp    sshd           0.0.0.0           │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    │└────────────────────────────────────────────────────────┘
│                    │┌ Processes ─────────────────────────────────────────────┐
│                    ││PID     NAME                    CPU%   RSS      USER    │
│                    ││1       init                    0.1    3.8M     0       │
│                    ││1234    sid                     2.3    47.7M    1000    │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
