crates/sid-widgets/tests/snapshots/network_widget_snapshot__network_empty_state.snap
---
source: crates/sid-widgets/tests/network_widget_snapshot.rs
expression: s
---
┌   Interfaces ──────┐┌ * Listening ports ─────────────────────────────────────┐
│                    ││PORT    PID     PROTO  COMMAND        ADDR              │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    │└────────────────────────────────────────────────────────┘
│                    │┌   Processes ───────────────────────────────────────────┐
│                    ││PID     NAME                    CPU%   RSS      USER    │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
