crates/sid-widgets/tests/snapshots/network_widget_snapshot__network_pinned_interface.snap
---
source: crates/sid-widgets/tests/network_widget_snapshot.rs
assertion_line: 121
expression: s
---
┌ Interfaces ────────┐┌ Listening ports ───────────────────────────────────────┐
│  ★* eth0           ││PORT    PID     PROTO  COMMAND        ADDR              │
│   * wlan0          ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    │└────────────────────────────────────────────────────────┘
│                    │┌ Processes ─────────────────────────────────────────────┐
│                    ││PID     NAME                    CPU%   RSS      USER    │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
